# Generative-AI-Applications

./: README.md
unit_tests_generator/: README.md  pyproject.toml
unit_tests_generator/src/unit_tests_generator/: main.py
unit_tests_generator/src/unit_tests_generator/crews/generate_unit_test_crew/: generate_unit_test_crew.py
unit_tests_generator/src/unit_tests_generator/crews/generate_unit_test_crew/config/: agents.yaml  tasks.yaml
unit_tests_generator/src/unit_tests_generator/crews/git_checkout_and_commit_crew/: git_checkout_and_commit_crew.py
unit_tests_generator/src/unit_tests_generator/crews/git_checkout_and_commit_crew/config/: agents.yaml
unit_tests_generator/src/unit_tests_generator/crews/git_clone_crew/: git_clone_crew.py
unit_tests_generator/src/unit_tests_generator/crews/git_clone_crew/config/: tasks.yaml
unit_tests_generator_with_feedback_loop/: README.md  pyproject.toml
unit_tests_generator_with_feedback_loop/src/unit_tests_generator_with_feedback_loop/: main.py
unit_tests_generator_with_feedback_loop/src/unit_tests_generator_with_feedback_loop/crews/build_project_crew/: build_project_crew.py
unit_tests_generator_with_feedback_loop/src/unit_tests_generator_with_feedback_loop/crews/build_project_crew/config/: agents.yaml  tasks.yaml
unit_tests_generator_with_feedback_loop/src/unit_tests_generator_with_feedback_loop/crews/generate_unit_test_crew/: generate_unit_test_crew.py
unit_tests_generator_with_feedback_loop/src/unit_tests_generator_with_feedback_loop/crews/git_checkout_and_commit_crew/: git_checkout_and_commit_crew.py
(+4 files in other folders)
