[project]
name = "unit_tests_generator"
version = "0.1.0"
description = "unit_tests_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "GitPython>=3.1.0"
]

[project.scripts]
kickoff = "unit_tests_generator.main:kickoff"
run_crew = "unit_tests_generator.main:kickoff"
plot = "unit_tests_generator.main:plot"
run_with_trigger = "unit_tests_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
